Fix top margin for header on mobile

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -119,6 +119,7 @@ and (max-width: @desktop-content-width) {
   }
   .application__header {
     margin-left: 10px;
+    margin-top: 20px;
   }
   .application__form-content-area {
     width: auto;
